force-app/main/default/objects/Checklist__c/fields/Assign_To__c.field-meta.xml
<CustomField>
    <fullName>Assign_To__c</fullName>
    <defaultValue>&apos;Owner of the record&apos;</defaultValue>
    <inlineHelpText>If Others is selected, you can assign the Checklist to any particular user.</inlineHelpText>
    <label>Assign To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owner of the record</fullName>
                <default>true</default>
                <label>Owner of the record</label>
            </value>
            <value>
                <fullName>Pick a User</fullName>
            </value>
            <value>
                <fullName>Pick a Queue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>