force-app/main/default/objects/Checklist__c/fields/Checklist_Item_Checked_Count__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Item_Checked_Count__c</fullName>
    <label>Checklist Item Checked Count</label>
    <summaryFilterItems>
        <field>Checklist_Item__c.Checked__c</field>
        <operation>equals</operation>
        <value>Yes, Not Applicable</value>
    </summaryFilterItems>
    <summaryForeignKey>Checklist_Item__c.Checklist__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>