force-app/main/default/objects/Checklist__c/fields/Checklist_Item_Count__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Item_Count__c</fullName>
    <label>Checklist Item Count</label>
    <summaryForeignKey>Checklist_Item__c.Checklist__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>