force-app/main/default/objects/Checklist__c/fields/Checklist_Template__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Predefined Checklist Items are auto-generated if a Checklist Template is selected.</inlineHelpText>
    <label>Checklist Template</label>
    <referenceTo>Checklist_Template__c</referenceTo>
    <relationshipLabel>Checklists</relationshipLabel>
    <relationshipName>Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>