force-app/main/default/objects/Checklist__c/fields/Checklist_Title__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Title__c</fullName>
    <label>Checklist Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>