force-app/main/default/objects/Checklist__c/fields/Is_Checklist_Locked__c.field-meta.xml
<CustomField>
    <fullName>Is_Checklist_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Checklist Locked</label>
    <type>Checkbox</type>
</CustomField>