force-app/main/default/objects/Checklist__c/fields/Is_Checklist_Template_Locked__c.field-meta.xml
<CustomField>
    <fullName>Is_Checklist_Template_Locked__c</fullName>
    <formula>if(Checklist_Template__c != null, Checklist_Template__r.IsLocked__c, false )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Checklist Template Locked</label>
    <type>Checkbox</type>
</CustomField>