force-app/main/default/objects/Checklist__c/fields/Percentage_Completion__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Completion__c</fullName>
    <formula>FLOOR(( Checklist_Item_Checked_Count__c  /  Checklist_Item_Count__c ) * 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentage Completion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>