force-app/main/default/objects/Checklist__c/fields/Related_To_Object__c.field-meta.xml
<CustomField>
    <fullName>Related_To_Object__c</fullName>
    <label>Related To Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>