force-app/main/default/objects/Checklist__c/fields/Sequential__c.field-meta.xml
<CustomField>
    <fullName>Sequential__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sequential</label>
    <type>Checkbox</type>
</CustomField>